style: fixes multiline code in markdown overlap

--- a/pages/blog/id.module.css
+++ b/pages/blog/id.module.css
@@ -17,6 +17,6 @@
 @media (max-width: 750px) {
   .root {
     margin: 50px 0px !important;
-    padding: 20px !important;
+    padding: 15px !important;
   }
 }
